--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,5 +24,10 @@
     <color name="text_primary">#212121</color>
     <color name="text_secondary">#757575</color>
     <color name="material_dynamic_primary40">#FF0000</color> <!-- example -->
+    <color name="card_background">#1A1A1A</color>
+    <color name="primary_light">#BB86FC</color>
+
+
+    <color name="error_red">#FF4444</color>
 
 </resources>
